--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.untold.garden"
+url: "https://untoldgarden.github.io/website/"
 layouts_dir: _layouts
 data_dir: _data
 permalink: pretty
