--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 title: Untold Garden
 email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- 
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://untoldgarden.site"
+baseurl: "" 
+url: "https://untold.garden"
 layouts_dir: _layouts
 data_dir: _data
 permalink: pretty
